# stx-gui

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.md  centos_pike_wheels.inc  centos_pkg_dirs  manage.py  pylint.rc  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
starlingx-dashboard/starlingx-dashboard/: MANIFEST.in  setup.cfg  setup.py  tox.ini
starlingx-dashboard/starlingx-dashboard/starlingx_dashboard/: configss.py  exceptions.py  version.py
starlingx-dashboard/starlingx-dashboard/starlingx_dashboard/api/: __init__.py  base.py  ceph.py  dc_manager.py  fm.py  iservice.py  neutron.py  nova.py  patch.py  sysinv.py  vim.py
starlingx-dashboard/starlingx-dashboard/starlingx_dashboard/api/rest/: __init__.py  dc_manager.py  fm.py  sysinv.py
starlingx-dashboard/starlingx-dashboard/starlingx_dashboard/dashboards/dc_admin/: dashboard.py
starlingx-dashboard/starlingx-dashboard/starlingx_dashboard/enabled/: _1001_starlingx.py  _1031_starlingx_project_server_groups_panel.py  _1091_starlingx_api_access_panel.py  _2032_starlingx_admin_fault_management_panel.py  _2035_starlingx_admin_inventory_panel.py  _2036_starlingx_admin_providernets.py  _2039_starlingx_admin_system_config.py  _2061_starlingx_admin_server_groups_panel.py  _2200_starlingx_dc_admin.py  _2210_starlingx_dc_admin_cloud_overview_panel.py  _2212_WRS_dc_admin_software_management_panel.py  _2400_starlingx_admin_fault_management_panel_group.py  _2401_starlingx_admin_fault_management_alarms_panel.py  _2402_starlingx_admin_fault_management_events_panel.py  _2403_starlingx_admin_fault_management_events_suppression_panel.py  _2823_starlingx_disable_defaults_panel.py  _2841_starlingx_admin_info_panel_tabs.py
starlingx-dashboard/starlingx-dashboard/starlingx_dashboard/horizon/forms/: __init__.py  fields.py
starlingx-dashboard/starlingx-dashboard/starlingx_dashboard/horizon/tables/: __init__.py  actions.py
starlingx-dashboard/starlingx-dashboard/starlingx_dashboard/local/: local_settings.py.example
starlingx-dashboard/starlingx-dashboard/starlingx_dashboard/local/local_settings.d/: _30_stx_local_settings.py
starlingx-dashboard/starlingx-dashboard/starlingx_dashboard/static/js/: horizon.alarmbanner.js  horizon.details.js  horizon.hosttopology.js  windriver.rickshaw.js
starlingx-dashboard/starlingx-dashboard/starlingx_dashboard/templatetags/: getvalue.py
starlingx-dashboard/starlingx-dashboard/starlingx_dashboard/utils/: objectify.py
(+749 files in other folders)
