[metadata]
name = starlingx-dashboard
summary = StarlingX Dashboard
author = Eddie Ramirez
author_email = eddie.ramirez@intel.com
home-page = http://docs.openstack.org/developer/horizon/
classifier =
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages =
   starlingx_dashboard 

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
