[metadata]
name = starlingx-dashboard
summary = StarlingX Dashboard Panels
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/StarlingX
classifier =
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages =
   starlingx_dashboard 

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
